--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -1,11 +1,12 @@
+/* ==========================================================================
+   SHARED THEME SETTINGS
+   ========================================================================== */
 
 /* ==========================================================================
-   Variables
+   TYPOGRAPHY
    ========================================================================== */
 
-/*
-   Typography
-   ========================================================================== */
+/* Used to set the size for <em> */
 
 $doc-font-size              : 16;
 
