--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -133,9 +133,11 @@ $x-large                    : 1280px !default;
    Grid
    ========================================================================== */
 
-$right-sidebar-width-narrow : 200px;
-$right-sidebar-width        : 250px;
-$right-sidebar-width-wide   : 300px;
+
+$right-sidebar-width-narrow : auto;
+$right-sidebar-width        : auto;
+$right-sidebar-width-wide   : auto;
+
 
 $susy: (
   columns: 12,
